switched from plain react to nextjs

--- a/styles/components/projects.css
+++ b/styles/components/projects.css
@@ -24,7 +24,7 @@
     overflow: hidden;
     max-height: 5rem;
     -webkit-line-clamp: 4;
-    display: box;
+    display: -webkit-box;
     display: -webkit-box;
     -webkit-box-orient: vertical;
     text-overflow: ellipsis;
